--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ alembic~=1.13
 ruff~=0.4
 pytest~=8.2
 python-multipart~=0.0.7
-sentence-transformers~=0.6
+sentence-transformers~=2.3
 pydantic-settings~=2.2
 aiofiles~=23.2
+httpx~=0.28
