Integrate HumbleWorth API

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 # Environment configuration for the Lucas project
 # Copy to .env and fill in actual values
+
+# Optional API key for HumbleWorth valuations (currently not required)
+LUCAS_HUMBLEWORTH_API_KEY=
